@@ -8,9 +8,16 @@ from .access_permissions import TopicAccessPermissions
 
 
 class TopicManager(models.Manager):
-    def get_queryset(self):
-        query = super().get_queryset().prefetch_related('attachments', 'agenda_items')
-        return query
+    """
+    Customized model manager to support our get_full_queryset method.
+    """
+    def get_full_queryset(self):
+        """
+        Returns the normal queryset with all topics. In the background all
+        attachments and the related agenda item are prefetched from the
+        database.
+        """
+        return self.get_queryset().prefetch_related('attachments', 'agenda_items')
 
 
 class Topic(RESTModelMixin, models.Model):
@@ -18,14 +25,15 @@ class Topic(RESTModelMixin, models.Model):
     Model for slides with custom content. Used to be called custom slide.
     """
     access_permissions = TopicAccessPermissions()
+
     objects = TopicManager()
 
     title = models.CharField(max_length=256)
     text = models.TextField(blank=True)
     attachments = models.ManyToManyField(Mediafile, blank=True)
 
-    # In theory there could be one then more agenda_item. But support only one.
-    # See the property agenda_item.
+    # In theory there could be one then more agenda_item. But we support only
+    # one. See the property agenda_item.
     agenda_items = GenericRelation(Item, related_name='topics')
 
     class Meta:
@@ -39,6 +47,8 @@ class Topic(RESTModelMixin, models.Model):
         """
         Returns the related agenda item.
         """
+        # We support only one agenda item so just return the first element of
+        # the queryset.
         return self.agenda_items.all()[0]
 
     @property
