@@ -57,38 +57,40 @@ class RESTModelMixin:
 
     def save(self, skip_autoupdate=False, information=None, *args, **kwargs):
         """
-        Calls the django save-method and afterwards hits the autoupdate system.
+        Calls Django's save() method and afterwards hits the autoupdate system.
 
         If skip_autoupdate is set to True, then the autoupdate system is not
         informed about the model changed. This also means, that the model cache
-        is not updated.
+        is not updated. You have to do it manually. Like this:
 
-        The optional argument information can be an object that is given to the
-        autoupdate system. It should be a dict.
+        TODO HELP ME
+
+        The optional argument information can be a dictionary that is given to
+        the autoupdate system.
         """
-        # TODO: Fix circular imports
+        #TODO: Add example in docstring.
+        #TODO: Fix circular imports
         from .autoupdate import inform_changed_data
         return_value = super().save(*args, **kwargs)
-        inform_changed_data(self.get_root_rest_element(), information=information)
+        if not skip_autoupdate:
+            inform_changed_data(self.get_root_rest_element(), information=information)
         return return_value
 
     def delete(self, skip_autoupdate=False, information=None, *args, **kwargs):
         """
-        Calls the django delete-method and afterwards hits the autoupdate system.
+        Calls Django's delete() method and afterwards hits the autoupdate system.
 
         See the save method above.
         """
-        # TODO: Fix circular imports
+        #TODO: Fix circular imports
         from .autoupdate import inform_changed_data, inform_deleted_data
-        # Django sets the pk of the instance to None after deleting it. But
-        # we need the pk to tell the autoupdate system which element was deleted.
         instance_pk = self.pk
         return_value = super().delete(*args, **kwargs)
-        if self != self.get_root_rest_element():
-            # The deletion of a included element is a change of the master
-            # element.
-            # TODO: Does this work in any case with self.pk = None?
-            inform_changed_data(self.get_root_rest_element(), information=information)
-        else:
-            inform_deleted_data(self, information=information)
+        if not skip_autoupdate:
+            if self != self.get_root_rest_element():
+                # The deletion of a included element is a change of the root element.
+                #TODO: Does this work in any case with self.pk == None?
+                inform_changed_data(self.get_root_rest_element(), information=information)
+            else:
+                inform_deleted_data(self.get_collection_string(), instance_pk, information=information)
         return return_value
